--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-  <title>Привет мир</title>title>
+  <title>Моя презентация</title> 
 </head>
     <body> 
-      <h1>Привет мир</h1> 
+
+      <p>
+        Нажмите,чтобы скачать или открыть презентацию:
+        <a href="СетьВводный.pptx">Презентация в формате .pptx</a> 
+        Нажмите,чтобы скачать или открыть index.htnl:
+        <a hret="index.htnl">Файл проверки работы с кириллицей .html</a> 
+      </p> 
+
     </body> 
-</html>
+</html> 
 
