--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <a hret="index.htnl">Файл проверки работы с кириллицей .html</a> 
       </p> 
 
-    </body> 
+    </body> <a href=кроссворднарусском">Русский кроссоврд </a>
+  <a href=кроссворднаанглийском">Английский кроссворд </a>
 </html> 
 
