--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a hret="index.htnl">Файл проверки работы с кириллицей .html</a> 
       </p> 
 
-    </body> <a href=кроссворднарусском">Русский кроссоврд </a>
-  <a href=кроссворднаанглийском">Английский кроссворд </a>
+    </body> <a href="krossvordRU.html">Русский кроссоврд </a>
+  <a href="krossvordEN.html">Английский кроссворд </a>
 </html> 
 
