--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
   <title>Моя презентация</title> 
 </head>
-    <body> 
-
+    
+    </body> 
       <p>
         Нажмите,чтобы скачать или открыть презентацию:
         <a href="СетьВводный.pptx">Презентация в формате .pptx</a> 
@@ -12,7 +12,9 @@
         <a hret="index.htnl">Файл проверки работы с кириллицей .html</a> 
       </p> 
 
-    </body> <a href="krossvordRU.html">Русский кроссоврд </a>
+    </body><a href="krossvordRU.html">Русский кроссоврд </a>
   <a href="krossvordEN.html">Английский кроссворд </a>
+
+  
 </html> 
 
