--- a/index.html
+++ b/index.html
@@ -1,16 +1,9 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-  <title>Моя презентация</title> 
+    <title>Мой блог</title>
 </head>
-     </body> 
-      <p>
-        Нажмите,чтобы скачать или открыть презентацию:
-        <a href="СетьВводный.pptx">Презентация в формате .pptx</a> 
-        Нажмите,чтобы скачать или открыть index.htnl:
-        <a hret="index.htnl">Файл проверки работы с кириллицей .html</a> 
-      </p> 
-
+     </body>
     </body><a href="krossvordRU.html">Русский кроссоврд </a>
   <a href="krossvordEN.html">Английский кроссворд </a>
 </html> 
