--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -5,6 +5,8 @@
     <title>Заголовок страницы</title>
 </head>
 <body>
-    <p>Привет, мир!</p>
+    <p><Приближается один из любимых праздников в России — Новый год. В эти предпраздничные дни повсюду царит особая атмосфера: улицы украшают огнями, витрины магазинов превращаются в сказочные инсталляции, а дома наполняются ароматами мандаринов и свежей хвои. Люди с нетерпением ждут боя курантов, загадывают желания и готовятся к долгожданной встрече с Дедом Морозом и Снегурочка/p>
+     <p>В праздничные вечера многие семьи предпочитают уютное времяпрепровождение: застолье, настольные игры и разгадывание головоломок. Особенно популярны в Новый год тематические кроссворды — например, русский кроссворд с вопросами про зимние традиции, символы года и героев русских сказок. Такие задания не только развлекают, но и помогают детям и взрослым вспомнить интересные факты о празднике и его истории.</p>  
+      <p>Для тех, кто учит английский язык или хочет сделать праздник немного «международным», идеально подойдёт английский кроссворд на новогоднюю тему: слова вроде snowflake, fireworks, chimney и resolution помогут расширить словарный запас в игровой форме. Совмещая тёплую атмосферу дома, праздничное настроение и полезное занятие, можно сделать канун Нового года по-настоящему волшебным и запоминающимся для всей семьи.</p>  
 </body>
 </html>
