--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
   <head>
     <title>Мой блог</title>
 </head>
-     </body>
-    </body><a href="krossvordRU.html">Русский кроссоврд </a>
-  <a href="krossvordEN.html">Английский кроссворд </a>
+  
+<body>
+
+  
+    </body>
+  
+  
+  
+  
 </html> 
 
