--- a/index.html
+++ b/index.html
@@ -2,15 +2,7 @@
 <html lang="ru">
   <head>
     <title>Мой блог</title>
-</head>
-  
-<body>
-
-  
-    </body>
-  
-  
-  
-  
+</head> 
+    </body><p>Иконки: 
 </html> 
 
