--- a/index.html
+++ b/index.html
@@ -4,5 +4,17 @@
     <title>Мой блог</title>
 </head> 
     </body><p>Иконки: 
+      <h2> 01.12, 2025</h2>
+      <img src=“Icons/free-icon-stars-2300158.png” alt=“Новый год”>
+Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
+<h2> 15 октября , 2025</h2>
+  <p>
+Я сделала Новогодние кроссворды для сайта <a href=“http://https://yanajanusia.github.io/LIVE-IS-LIVE”  title=“Блог моего другаhttp://https://yanajanusia.github.io/LIVE-IS-LIVE”</a>
+</p>
+<h2> 1 сентября , 2025</h2>
+<blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
+<p>
+  Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
+</p>
 </html> 
 
