--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
 <p>
   Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
-  <p>Поздравляю с наступающим рождеством 2026!<a href="kolyadka.odt2" tittle= "Рождество" download>Поздравляю с наступающим рождеством 2026!<a>
+  <p>Поздравляю с наступающим рождеством 2026!<a href="kolyadka.odt" tittle= "Рождество" download>Поздравляю с наступающим рождеством 2026!<a>
 </p></body>
 </html> 
 
