--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 <blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
 <p>
   Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
-  <p>Поздравляю с наступающим рождеством 2026!<a href="kolyadka.odt" tittle= "Рождество" download>Поздравляю с наступающим рождеством 2026!<a>
+</p>
+      <h2>20 декабря,2025</h2>
+  <p>Поздравляю с наступающим рождеством 2026!<a href="kolyadka.odt" tittle= "Рождество" download>Поздравляю с наступающим рождеством 2026!</a>
 </p></body>
 </html> 
 
