--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       
       <p>Иконки: 
       <h2> 01.12, 2025</h2>
-      <img src=“Icons/free-icon-stars-2300158.png” alt=“Новый год”>
+      <p><a href="новый год.mp4" title="новый год" download="Новый_год.mp4">Скачать видео про Новый год (MP4)</a></p>
 Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
 <h2> 15 октября , 2025</h2>
   <p>
@@ -27,4 +27,7 @@
   <p>Поздравляю с наступающим рождеством 2026!<a href="kolyadka.odt" tittle= "Рождество" download>Поздравляю с наступающим рождеством 2026!</a>
 </p></body>
 </html> 
-
+<body>
+  <h2>19 января 2026</h2>
+  <p> 1)а. Ключ = 17 б.Ключ = 27, 2)ПРИВЕТ → ФХНЗКЧ при k = 5, ВЕСНА → ЦЩЕБФ при k = 20, 3)Щеняева→ ГПЧЙПМК </p> 
+  
