--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="ru">
   <head>
     <title>Мой блог</title>
-</head> 
+  </head><p><!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8" />
+  <title>Мой сайт</title>
+  <!-- Подключение CSS-файла -->
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Привет, мир!</h1>
+</body>
+</html></p></p>
     <body>
       <p> 14.01, 2026</p>
       <p>Домен - Vikyyyysik github io. </p>
