--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
-    <title>Мой блог</title>
-  </head><p><!DOCTYPE html>
-<html lang="ru">
-<head>
-  <meta charset="UTF-8" />
-  <title>Мой сайт</title>
-  <!-- Подключение CSS-файла -->
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>С Новым Годом! 🎅</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <div class="snowflakes" aria-hidden="true">
+    <div class="snowflake">❅</div>
+    <div class="snowflake">❆</div>
+    <div class="snowflake">❄</div>
+  </div>
+
+  <div class="container">
   <h1>Привет, мир!</h1>
 </body>
 </html></p></p>
