--- a/index.html
+++ b/index.html
@@ -2,11 +2,38 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>С Новым Годом! 🎅</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Привет, мир!</title>
+  <style>
+    body {
+      background-color: #ffd6e7; /* нежно-розовый фон */
+      margin: 40px;
+      font-family: Arial, sans-serif;
+      color: #333;
+      line-height: 1.5;
+    }
+  </style>
 </head>
 <body>
-  <div class="snowflakes" aria-hidden="true">
-…</body>
+
+<h1>Привет, мир!</h1>
+<p>14.01, 2026</p>
+<p>Домен - Vikyyyysik github io.</p>
+<p>Иконки:</p>
+
+<h2>01.12, 2025</h2>
+<p>Скачать видео про Новый год (MP4)</p>
+<p>Поздравление с Наступающим 2026 годом читайте здесь.</p>
+
+<h2>15 октября , 2025</h2>
+<p>Я сделала Новогодние кроссворды для сайта</p>
+
+<h2>1 сентября , 2025</h2>
+<p>Путешествие в тысячу миль начинается с одного шага (Лао Цзы)</p>
+<p>Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.</p>
+
+<h2>20 декабря,2025</h2>
+<p>Поздравляю с наступающим рождеством 2026!</p>
+<p>Поздравляю с наступающим рождеством 2026!</p>
+
+</body>
 </html>
