--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p>Поздравление с Наступающим 2026 годом читайте<a href=“Congratulations2026.html”>здесь.</p>
 
 <h2>15 октября , 2025</h2>
-<p>Я сделала Новогодние кроссворды для сайта</p>
+<p>Я сделала Новогодние кроссворды для сайта<a href=“http://https://yanajanusia.github.io/LIVE-IS-LIVE”  title=“Блог моего друга http://https://yanajanusia.github.io/LIVE-IS-LIVE”</a> </p>
 
 <h2>1 сентября , 2025</h2>
 <p>Путешествие в тысячу миль начинается с одного шага (Лао Цзы)</p>
