--- a/index.html
+++ b/index.html
@@ -45,7 +45,34 @@
 <h1>Привет, мир!</h1>
 <p>14.01, 2026</p>
 <p>Домен - Vikyyyysik github io.</p>
-<p>Иконки:</p>
+<p>Иконки:
+ <div style="text-align: center; margin: 2rem 0;">
+  <svg width="200" height="250" viewBox="0 0 200 250" xmlns="http://www.w3.org/2000/svg">
+    <!-- Звезда на макушке -->
+    <polygon points="100,10 112,40 145,40 120,60 130,90 100,75 70,90 80,60 55,40 88,40"
+             fill="#FFD700" stroke="#FFA500" stroke-width="1"/>
+
+    <!-- Ярусы ёлки -->
+    <polygon points="100,40 60,100 140,100" fill="#0A5F20"/>
+    <polygon points="100,80 50,140 150,140" fill="#0D7A29"/>
+    <polygon points="100,120 40,190 160,190" fill="#0F9E33"/>
+
+    <!-- Ствол -->
+    <rect x="90" y="190" width="20" height="30" fill="#8B4513"/>
+
+    <!-- Украшения (шарики) -->
+    <circle cx="70" cy="95" r="6" fill="#FF4C4C"/>
+    <circle cx="130" cy="110" r="6" fill="#4C4CFF"/>
+    <circle cx="90" cy="150" r="6" fill="#FFFF4C"/>
+    <circle cx="120" cy="170" r="6" fill="#FF4CFF"/>
+
+    <!-- Снежинки вокруг -->
+    <text x="30" y="30" font-size="16" opacity="0.8">❄</text>
+    <text x="170" y="50" font-size="14" opacity="0.7">❄</text>
+    <text x="20" y="120" font-size="12" opacity="0.6">❄</text>
+    <text x="180" y="150" font-size="10" opacity="0.5">❄</text>
+  </svg>
+</div></p>
 
 <h2>01.12, 2025</h2>
 <p>Скачать видео про Новый год (MP4)</p>
