--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
 
 <h2>01.12, 2025</h2>
 <p>Скачать видео про Новый год (MP4)</p>
-<p>Поздравление с Наступающим 2026 годом читайте<a href=“Congratulations2026.html”>здесь.</p>
-
+</p>Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”>здесь.</a>
 <h2>15 октября , 2025</h2>
 <p>Я сделала Новогодние кроссворды для сайта<a href=“http://https://yanajanusia.github.io/LIVE-IS-LIVE”  title=“Блог моего друга http://https://yanajanusia.github.io/LIVE-IS-LIVE”</a> </p>
 
