--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
 <p>Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.</p>
 
 <h2>20 декабря,2025</h2>
-<p>Поздравляю с наступающим рождеством 2026!</p>
-<p>Поздравляю с наступающим рождеством 2026!</p>
+<p>Поздравляю с наступающим рождеством 2026!!<a href="kolyadka.odt" tittle= "Рождество" download> </p>Поздравляю с наступающим рождеством 2026!</p>
 
 </body>
 </html>
