--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 </body>
 </html>
 <p>21.01.2026</p>
+<p class="zz"><br>
 <p>Открытый ключ: (n, e) = (35,5) → им можно зашифровать</p>
 <p>Закрытый ключ: (n, d) = (35,5) → им можно расшифровать</p>
 <p>C=32</p>
