--- a/index.html
+++ b/index.html
@@ -78,5 +78,16 @@ American dipper: 21.22%
 black grouse: 14.61%
 magpie: 11.47%
   </p>
+<h2>21.02.2026</h2>
+  <p>Вопрос пользователя: Сколько ждать мой заказ?
+Найден FAQ-вопрос: Как быстро доставляется заказ? (sim=0.706)
+Ответ бот-FAQ: Наш стандартный срок доставки — 3–5 рабочих дней.
+  Вопрос пользователя: Сколько ждать мой заказ?
+Найден FAQ-вопрос: Как быстро доставляется заказ? (sim=0.706)
+Ответ бот-FAQ: Наш стандартный срок доставки — 3–5 рабочих дней.</p>
+  
+
+
+  
 </body>
 </html>
