--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@ magpie: 11.47%
   </p>
 <h2>21.02.2026</h2>
   <p>Вопрос пользователя: Сколько ждать мой заказ?
-Найден FAQ-вопрос: Как быстро доставляется заказ? (sim=0.706)
-Ответ бот-FAQ: Наш стандартный срок доставки — 3–5 рабочих дней.</p>
+Найден FAQ-вопрос: Как оплатить заказ? (sim=0.719)
+Ответ бот-FAQ: Да, возврат возможен в течение 14 дней.</p>
   
 
 
